[gd_scene load_steps=35 format=2]

[ext_resource path="res://tileset/starrybackground.png" type="Texture" id=1]
[ext_resource path="res://tileset/whiteborders.png" type="Texture" id=2]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/spr_mc/front_mc.png" type="Texture" id=4]
[ext_resource path="res://entities/boss_attacks/node_boss_attacks.tscn" type="PackedScene" id=5]
[ext_resource path="res://maps/chapter5/dark_mc.gd" type="Script" id=6]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=7]
[ext_resource path="res://maps/chapter5/chapter5-selfdoubt.gd" type="Script" id=8]
[ext_resource path="res://maps/chapter5/aberration_anim.tscn" type="PackedScene" id=9]
[ext_resource path="res://dialogue/dialogue_system.tscn" type="PackedScene" id=10]
[ext_resource path="res://dialogue/dialogue_holder.tscn" type="PackedScene" id=11]
[ext_resource path="res://sprites/spr_mc/spr_darkmc.png" type="Texture" id=12]
[ext_resource path="res://sprites/spr_mc/spr_neutral.png" type="Texture" id=13]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=17]
0/name = "whiteborders.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 48, 48 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "whiteborders.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 48, 0, 48, 48 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 24, 24 )

[sub_resource type="Animation" id=20]
resource_name = "void_atk"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("area_void_attack/CollisionShape2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.287175, 15.451, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area_void_attack/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.29, 15.45, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("area_void_attack/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ 0.0, 720.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("area_void_attack/CollisionShape2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ 0.0, 720.0 ]
}

[sub_resource type="CircleShape2D" id=21]
radius = 35.749

[node name="chapter5-selfdoubt" type="Node2D"]
script = ExtResource( 8 )

[node name="dialogue_system" parent="." instance=ExtResource( 10 )]
boss = "dark_mc"

[node name="0" parent="dialogue_system" instance=ExtResource( 11 )]
dialogue_lines = [ [ "Walaupun kau akan mengalahkanku", "Aku akan tetap bersamamu selamanya", "Dan selamanya aku akan menahanmu" ], [ "Though you will beat me", "I will forever linger", "And forever also I am going to suppress you" ] ]
dialogue_picture_resource = [ ExtResource( 12 ), null, ExtResource( 13 ) ]
dialogue_command = "enable_boss"

[node name="aberration_anim" parent="." instance=ExtResource( 9 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 320, 180 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 320, 180 )

[node name="tilemap_whiteborders" type="TileMap" parent="."]
tile_set = SubResource( 17 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1310733, 0, 65537, -1310732, 0, 65537, -1310731, 0, 65537, -1310730, 0, 65537, -1310729, 0, 0, -1310728, 0, 1, -1310727, 0, 1, -1310726, 0, 1, -1310725, 0, 1, -1310724, 0, 1, -1310723, 0, 1, -1310722, 0, 1, -1310721, 0, 1, -1376256, 0, 1, -1376255, 0, 1, -1376254, 0, 1, -1376253, 0, 1, -1376252, 0, 1, -1376251, 0, 1, -1376250, 0, 1, -1376249, 0, 1, -1376248, 0, 2, -1376247, 0, 65537, -1376246, 0, 65537, -1376245, 0, 65537, -1376244, 0, 65537, -1245197, 0, 65537, -1245196, 0, 65537, -1245195, 0, 65537, -1245194, 0, 65537, -1245193, 0, 65536, -1310712, 0, 65538, -1310711, 0, 65537, -1310710, 0, 65537, -1310709, 0, 65537, -1310708, 0, 65537, -1179661, 0, 65537, -1179660, 0, 65537, -1179659, 0, 65537, -1179658, 0, 65537, -1179657, 0, 65536, -1245176, 0, 65538, -1245175, 0, 65537, -1245174, 0, 65537, -1245173, 0, 65537, -1245172, 0, 65537, -1114125, 0, 65537, -1114124, 0, 65537, -1114123, 0, 65537, -1114122, 0, 65537, -1114121, 0, 65536, -1179640, 0, 65538, -1179639, 0, 65537, -1179638, 0, 65537, -1179637, 0, 65537, -1179636, 0, 65537, -1048589, 0, 65537, -1048588, 0, 65537, -1048587, 0, 65537, -1048586, 0, 65537, -1048585, 0, 65536, -1114104, 0, 65538, -1114103, 0, 65537, -1114102, 0, 65537, -1114101, 0, 65537, -1114100, 0, 65537, -983053, 0, 65537, -983052, 0, 65537, -983051, 0, 65537, -983050, 0, 65537, -983049, 0, 65536, -1048568, 0, 65538, -1048567, 0, 65537, -1048566, 0, 65537, -1048565, 0, 65537, -1048564, 0, 65537, -917517, 0, 65537, -917516, 0, 65537, -917515, 0, 65537, -917514, 0, 65537, -917513, 0, 65536, -983032, 0, 65538, -983031, 0, 65537, -983030, 0, 65537, -983029, 0, 65537, -983028, 0, 65537, -851981, 0, 65537, -851980, 0, 65537, -851979, 0, 65537, -851978, 0, 65537, -851977, 0, 65536, -917496, 0, 65538, -917495, 0, 65537, -917494, 0, 65537, -917493, 0, 65537, -917492, 0, 65537, -786445, 0, 65537, -786444, 0, 65537, -786443, 0, 65537, -786442, 0, 65537, -786441, 0, 65536, -851960, 0, 65538, -851959, 0, 65537, -851958, 0, 65537, -851957, 0, 65537, -851956, 0, 65537, -720909, 0, 65537, -720908, 0, 65537, -720907, 0, 65537, -720906, 0, 65537, -720905, 0, 65536, -786424, 0, 65538, -786423, 0, 65537, -786422, 0, 65537, -786421, 0, 65537, -786420, 0, 65537, -655373, 0, 65537, -655372, 0, 65537, -655371, 0, 65537, -655370, 0, 65537, -655369, 0, 65536, -720888, 0, 65538, -720887, 0, 65537, -720886, 0, 65537, -720885, 0, 65537, -720884, 0, 65537, -589837, 0, 65537, -589836, 0, 65537, -589835, 0, 65537, -589834, 0, 65537, -589833, 0, 65536, -655352, 0, 65538, -655351, 0, 65537, -655350, 0, 65537, -655349, 0, 65537, -655348, 0, 65537, -524301, 0, 65537, -524300, 0, 65537, -524299, 0, 65537, -524298, 0, 65537, -524297, 0, 65536, -589816, 0, 65538, -589815, 0, 65537, -589814, 0, 65537, -589813, 0, 65537, -589812, 0, 65537, -458765, 0, 65537, -458764, 0, 65537, -458763, 0, 65537, -458762, 0, 65537, -458761, 0, 65536, -524280, 0, 65538, -524279, 0, 65537, -524278, 0, 65537, -524277, 0, 65537, -524276, 0, 65537, -393229, 0, 65537, -393228, 0, 65537, -393227, 0, 65537, -393226, 0, 65537, -393225, 0, 65536, -458744, 0, 65538, -458743, 0, 65537, -458742, 0, 65537, -458741, 0, 65537, -458740, 0, 65537, -327693, 0, 65537, -327692, 0, 65537, -327691, 0, 65537, -327690, 0, 65537, -327689, 0, 65536, -393208, 0, 65538, -393207, 0, 65537, -393206, 0, 65537, -393205, 0, 65537, -393204, 0, 65537, -262157, 0, 65537, -262156, 0, 65537, -262155, 0, 65537, -262154, 0, 65537, -262153, 0, 65536, -327672, 0, 65538, -327671, 0, 65537, -327670, 0, 65537, -327669, 0, 65537, -327668, 0, 65537, -196621, 0, 65537, -196620, 0, 65537, -196619, 0, 65537, -196618, 0, 65537, -196617, 0, 65536, -262136, 0, 65538, -262135, 0, 65537, -262134, 0, 65537, -262133, 0, 65537, -262132, 0, 65537, -131085, 0, 65537, -131084, 0, 65537, -131083, 0, 65537, -131082, 0, 65537, -131081, 0, 65536, -196600, 0, 65538, -196599, 0, 65537, -196598, 0, 65537, -196597, 0, 65537, -196596, 0, 65537, -65549, 0, 65537, -65548, 0, 65537, -65547, 0, 65537, -65546, 0, 65537, -65545, 0, 65536, -131064, 0, 65538, -131063, 0, 65537, -131062, 0, 65537, -131061, 0, 65537, -131060, 0, 65537, -13, 0, 65537, -12, 0, 65537, -11, 0, 65537, -10, 0, 65537, -9, 0, 65536, -65528, 0, 65538, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, 65523, 0, 65537, 65524, 0, 65537, 65525, 0, 65537, 65526, 0, 65537, 65527, 0, 65536, 8, 0, 65538, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 65537, 131059, 0, 65537, 131060, 0, 65537, 131061, 0, 65537, 131062, 0, 65537, 131063, 0, 65536, 65544, 0, 65538, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 196595, 0, 65537, 196596, 0, 65537, 196597, 0, 65537, 196598, 0, 65537, 196599, 0, 65536, 131080, 0, 65538, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 262131, 0, 65537, 262132, 0, 65537, 262133, 0, 65537, 262134, 0, 65537, 262135, 0, 131072, 262136, 0, 131073, 262137, 0, 131073, 262138, 0, 131073, 262139, 0, 131073, 262140, 0, 131073, 262141, 0, 131073, 262142, 0, 131073, 262143, 0, 131073, 196608, 0, 131073, 196609, 0, 131073, 196610, 0, 131073, 196611, 0, 131073, 196612, 0, 131073, 196613, 0, 131073, 196614, 0, 131073, 196615, 0, 131073, 196616, 0, 131074, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 327667, 0, 65537, 327668, 0, 65537, 327669, 0, 65537, 327670, 0, 65537, 327671, 0, 65537, 327672, 0, 65537, 327673, 0, 65537, 327674, 0, 65537, 327675, 0, 65537, 327676, 0, 65537, 327677, 0, 65537, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 393203, 0, 65537, 393204, 0, 65537, 393205, 0, 65537, 393206, 0, 65537, 393207, 0, 65537, 393208, 0, 65537, 393209, 0, 65537, 393210, 0, 65537, 393211, 0, 65537, 393212, 0, 65537, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 458739, 0, 65537, 458740, 0, 65537, 458741, 0, 65537, 458742, 0, 65537, 458743, 0, 65537, 458744, 0, 65537, 458745, 0, 65537, 458746, 0, 65537, 458747, 0, 65537, 458748, 0, 65537, 458749, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 524275, 0, 65537, 524276, 0, 65537, 524277, 0, 65537, 524278, 0, 65537, 524279, 0, 65537, 524280, 0, 65537, 524281, 0, 65537, 524282, 0, 65537, 524283, 0, 65537, 524284, 0, 65537, 524285, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537 )
script = ExtResource( 7 )

[node name="entity_mc" parent="." instance=ExtResource( 3 )]

[node name="node_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_spawn"]
position = Vector2( -96, -256 )

[node name="1" type="Position2D" parent="node_spawn"]
position = Vector2( 0, -256 )

[node name="3" type="Position2D" parent="node_spawn"]
position = Vector2( -96, -128 )

[node name="4" type="Position2D" parent="node_spawn"]
position = Vector2( 96, -128 )

[node name="5" type="Position2D" parent="node_spawn"]
position = Vector2( 96, 0 )

[node name="6" type="Position2D" parent="node_spawn"]
position = Vector2( -96, 0 )

[node name="2" type="Position2D" parent="node_spawn"]
position = Vector2( 96, -256 )

[node name="dark_mc" type="KinematicBody2D" parent="."]
position = Vector2( 0, -256 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="node_boss_attacks" parent="dark_mc" instance=ExtResource( 5 )]

[node name="spr_mc" type="Sprite" parent="dark_mc"]
self_modulate = Color( 0.223529, 0.321569, 0.439216, 1 )
texture = ExtResource( 4 )

[node name="col_dark_mc" type="CollisionShape2D" parent="dark_mc"]
shape = SubResource( 18 )

[node name="area_void_attack" type="Area2D" parent="dark_mc"]
show_behind_parent = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="dark_mc/area_void_attack"]
rotation = 12.5664
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 19 )

[node name="Sprite" type="Sprite" parent="dark_mc/area_void_attack"]
modulate = Color( 0.670588, 0.0117647, 0.0117647, 1 )
show_behind_parent = true
position = Vector2( 0.899582, 0.899567 )
rotation = 12.5664
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 48, 48 )

[node name="anim_atk" type="AnimationPlayer" parent="dark_mc"]
anims/void_atk = SubResource( 20 )

[node name="node_timer" type="Node" parent="dark_mc"]

[node name="timer_stage_one" type="Timer" parent="dark_mc/node_timer"]
wait_time = 5.0
one_shot = true

[node name="timer_stage_two" type="Timer" parent="dark_mc/node_timer"]
wait_time = 3.0
one_shot = true

[node name="timer_stage_three" type="Timer" parent="dark_mc/node_timer"]
wait_time = 3.0
one_shot = true

[node name="area_defeated" type="Area2D" parent="dark_mc"]
collision_layer = 0

[node name="col_area_defeated" type="CollisionShape2D" parent="dark_mc/area_defeated"]
shape = SubResource( 21 )
[connection signal="body_entered" from="dark_mc/area_void_attack" to="dark_mc" method="_on_area_void_attack_body_entered"]
[connection signal="body_entered" from="dark_mc/area_defeated" to="dark_mc" method="_on_area_defeated_body_entered"]
